# upmem-cmake-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake  CompilerWarnings.cmake  FindDPU.cmake  InterproceduralOptimization.cmake
kernel/: CMakeLists.txt
kernel/include/kernel/: kernel.h.in
kernel/src/: sum.c
mylib/: CMakeLists.txt
mylib/include/mylib/: mylib.h  mylib_version.h.in
mylib/src/: mylib.cpp
tests/: CMakeLists.txt  tests.cpp
